# winapi-gen

./: Cargo.toml  LICENSE  README.md  build.rs  winapi_header.example.h
src/: ast.rs  file.rs  header.lalrpop  header_file.rs  lexer.rs  lib.rs  macros.rs  parser.rs  state.rs  token.rs  tokenizer.rs
