[package]
name = "winapi-gen"
version = "0.1.0"
authors = ["Matthew Knight <mattlknight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "winapi_gen"
path = "src/lib.rs"

[[bin]]
name = "winapi_gen"
path = "src/bin/main.rs"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.1"
