[package]
name = "winapi-gen"
version = "0.1.0"
authors = ["Matthew Knight <mattlknight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "winapi_gen"
path = "src/lib.rs"

[[bin]]
name = "winapi_gen"
path = "src/bin/main.rs"

# [build-dependencies] # <-- We added this and everything after!
# lalrpop = "0.17.2"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
lalrpop-util = "0.17.2"
lazy_static = "1.4.0"
log = "0.4.8"
env_logger = "0.6.2"
regex = "0.2.1"
