[package]
name = "winapi-gen"
version = "0.1.0"
authors = ["Matthew Knight <mattlknight@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "winapi_gen"
path = "src/lib.rs"

[[bin]]
name = "winapi_gen"
path = "src/bin/main.rs"

[dependencies]
cssparser-macros = {path = "./macros", version = "0.4"}
failure = "0.1.5"
failure_derive = "0.1.5"
lalrpop-util = "0.17.2"
lazy_static = "1.4.0"
log = "0.4.8"
matches = "0.1"
env_logger = "0.6.2"
regex = "0.2.1"
smallvec = "0.6"

[build-dependencies]
syn = { version = "1", features = ["extra-traits", "fold", "full"] }
quote = "1"
proc-macro2 = "1"
lalrpop = "0.17.2"

[workspace]
members = [".", "./macros", "./procedural-masquerade"]